--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,42 @@
 {
     "name": "flatorb/translator",
-    "description": "",
-    "type": "library",
-    "license": "MIT",
+    "description": ":description",
+    "license": "GPL v3",
     "authors": [
         {
             "name": "Flatorb",
-            "email": "contact@flatorb.com"
+            "email": "contact@flatorb.com",
+            "homepage": "https://www.flatorb.com"
         }
     ],
+    "homepage": "https://github.com/flatorb/translator",
+    "keywords": ["Laravel", "Translator"],
+    "require": {
+        "illuminate/support": "~5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "^1.1",
+        "orchestra/testbench": "~3.0",
+        "sempro/phpunit-pretty-print": "^1.0"
+    },
     "autoload": {
-            "psr-4": {
-                "Flatorb\\Translator\\": "src/"
-            }
-        },
-    "require": {},
-    "minimum-stability": "dev",
+        "psr-4": {
+            "Flatorb\\Translator\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Flatorb\\Translator\\Tests\\": "tests"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
                 "Flatorb\\Translator\\TranslatorServiceProvider"
             ],
             "aliases": {
-
+                "Translator": "Flatorb\\Translator\\Facades\\Translator"
             }
         }
     }
